# Multimodel_Refiner_CREWAI

./: .env  README.md  pyproject.toml  report.md
src/multi_model_refiner/: crew.py  main.py
src/multi_model_refiner/config/: agents.yaml  tasks.yaml
src/multi_model_refiner/tools/: __init__.py  custom_tool.py
